# adom_actix_web_example

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rust-toolchain
src/: config.rs  database.rs  errors.rs  lib.rs  migrations.rs
src/controllers/: helloworld.rs
src/migrations/: 202110282250_create_example_orders_table.sql
src/models/: mod.rs  orders.rs
